Made S3 bucket public, fixed bucket connection, and changed password for security integrity

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+BACKEND_URL=http://localhost:3000
 DATABASE_URL=postgresql://songarchive:small-scale73.antagonist@postgres.csh.rit.edu/songarchive
 DB_PORT=5432
 SECURITY_ENABLED=false
