--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "metalwebsitemadebyanidiot",
+    "name": "Evolution-of-Metal",
     "private": true,
     "version": "0.0.0",
     "type": "module",
